[gd_scene load_steps=4 format=3 uid="uid://bwov42n570dus"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_csryh"]
[ext_resource type="PackedScene" uid="uid://c8x2myah6myno" path="res://scene/level01.tscn" id="2_sxiy0"]
[ext_resource type="Texture2D" uid="uid://bvx2orokvdngn" path="res://icon.svg" id="3_pi81c"]

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csryh")
start = ExtResource("2_sxiy0")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.164706, 0.615686, 0.560784, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "trap ball"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 360.0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="start_button" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "START"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="credit_button" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
toggle_mode = true
text = "CREDIT"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="exit_button" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "EXIT"

[node name="how to play Container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -180.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="how to play Container"]
self_modulate = Color(0.439216, 0.439216, 0.439216, 1)
layout_mode = 2
texture = ExtResource("3_pi81c")

[node name="Label" type="Label" parent="how to play Container"]
layout_mode = 2
text = "HOW TO PLAY"

[node name="CREDIT Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -40.0
offset_bottom = 188.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="CREDIT Container"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="Label" type="Label" parent="CREDIT Container/MarginContainer"]
layout_mode = 2
text = "
DEVELOPER :  RAJA
DESINER   :  arun,
             vishal
ARTSIST   :     ,,
MUSIC     :     ,,"
autowrap_mode = 3

[connection signal="button_down" from="VBoxContainer/MarginContainer/start_button" to="." method="_on_start_button_button_down"]
[connection signal="toggled" from="VBoxContainer/MarginContainer2/credit_button" to="." method="_on_credit_button_toggled"]
[connection signal="button_down" from="VBoxContainer/MarginContainer3/exit_button" to="." method="_on_exit_button_button_down"]
